[gd_scene load_steps=4 format=2]

[ext_resource path="res://Updater/warning.png" type="Texture" id=1]
[ext_resource path="res://Updater/updater.gd" type="Script" id=2]
[ext_resource path="res://Fonts/text_large.tres" type="DynamicFont" id=3]

[node name="Updater" type="Node2D"]
script = ExtResource( 2 )
hash_url = "\"https://jumpyjumper.pythonanywhere.com/sudoku_version/\""
pck_url = "https://jumpyjumper.pythonanywhere.com/sudoku_pck/"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 0.435294, 0.435294, 1 )
margin_top = 576.0
margin_right = 1312.0
margin_bottom = 728.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateButton" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -32.0
margin_right = 128.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UpdateButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Update"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/UpdateButton"]
position = Vector2( 40, 32 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/UpdateButton"]
position = Vector2( 216, 32 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="HashRequest" type="HTTPRequest" parent="."]
download_chunk_size = 65537

[node name="PckRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CanvasLayer/UpdateButton" to="." method="_on_UpdateButton_pressed"]
[connection signal="request_completed" from="HashRequest" to="." method="_on_HashRequest_request_completed"]
[connection signal="request_completed" from="PckRequest" to="." method="_on_PckRequest_request_completed"]
